<resources>
    <string name="app_name">Buscaminas</string>
    <string name="action_settings">Settings</string>
    <string name="ajustes">Configura el juego</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="nuevo_juego">Nuevo juego</string>
    <string name="selecciona_personaje">Selecciona personaje</string>
    <string name="texto_instrucciones">
        Cuando pulsas en una casilla, sale un número que identifica cuántas minas hay alrededor.\n\n
        Pulsa donde no haya minas.\n\n
        Manten pulsado para identificar donde sí.\n\n
        Si pulsas una mina, pierdes.\n\n
        Si identificas todas las minas, ganas.\n\n
</string>
    <string name ="difficulty">Selecciona la dificultad</string>
    <string name ="accept">Aceptar</string>
    <string name ="cancel">Cerrar</string>

    <string name="ok">ok</string>
    <string name="selecciona_pers">Selecciona personaje:</string>
    <string name="ganador">¡Enhorabuena, has encontrado todas las hipotenochas!</string>
    <string name="perdedor">Lo siento, has perdido, no hay hipotenochas ahí.</string>
    <string name="titulo_instrucciones">Instrucciones</string>
    <string name="estenmatica">Estenmática</string>
    <string name="minas_total">Minas totales: %d</string>
    <string name="tiempo">Tiempo: 00:00</string>
    <string name="media">Media (10x10)</string>
    <string name="facil">Fácil (8x8)</string>
    <string name="dificil">Difícil (12x12)</string>

    <string-array name="characters_array">
        <item>Personaje 1</item>
        <item>Personaje 2</item>
        <item>Personaje 3</item>
    </string-array>
    <string-array name="nombres">
        <item>Estenmática</item>
        <item>Numérica</item>
        <item>Española</item>
        <item>Talaverana</item>
        <item>Flamenca</item>
        <item>Deportista</item>
        <item>Geo</item>
        <item>Enfermera</item>
        <item>Informática</item>
    </string-array>

    <integer-array name="imagenes">

    </integer-array>
</resources>
