<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/instrucciones"
        android:orderInCategory="1"
        android:title="@string/instrucciones"
        app:showAsAction="never" />

    <item
        android:id="@+id/nuevo_juego"
        android:orderInCategory="2"
        android:title="@string/nuevo_juego"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/ajustes"
        app:showAsAction="never" />

    <item
        android:id="@+id/selec_personaje"
        android:orderInCategory="4"
        android:title="@string/selecciona_personaje"
        app:showAsAction="ifRoom"
        android:icon="@drawable/hipo1" />

</menu>
