<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_difficulties"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioButton
        android:id="@+id/rb_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facil" />

    <RadioButton
        android:id="@+id/rb_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media" />

    <RadioButton
        android:id="@+id/rb_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dificil" />
</RadioGroup>
